-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 16
-
Component/s: hotspot
-
b26
/home/shade/trunks/jdk/src/hotspot/share/prims/foreign_globals.hpp:31:1: fatal error: foreign_globals_arm.hpp: No such file or directory
31 | #include CPU_HEADER(foreign_globals)
| ^~~~~~~~~~~~~~~~~~~
31 | #include CPU_HEADER(foreign_globals)
| ^~~~~~~~~~~~~~~~~~~
- relates to
-
JDK-8254231 Implementation of Foreign Linker API (Incubator)
-
- Resolved
-