8256857: ARM32 builds broken after JDK-8254231